Migrate from PHP/MySQL to Spring Boot + MongoDB full-stack
- Complete Spring Boot 3.2 backend with MongoDB, JWT auth, WebSocket
- React 18 + Vite frontend with Tailwind CSS and Leaflet maps
- Real-time GPS tracking via STOMP/SockJS WebSocket
- Razorpay payment integration
- Docker Compose orchestration (MongoDB + backend + frontend)
- Swagger/OpenAPI documentation at /swagger-ui.html
- Input validation with jakarta.validation
- Custom exceptions + @RestControllerAdvice global handler
- BCrypt password hashing
- 12 backend + 6 frontend unit tests (all passing)
- Cleaned up legacy PHP/HTML/MySQL files