@@ -15,9 +15,7 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(
-            Arrays.asList("http://localhost:5173", "http://localhost:3000")
-        );
+        config.setAllowedOriginPatterns(List.of("http://localhost:*"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowedMethods(
             Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")
